adding residual connexions and attention decoder

--- a/VAE_stocks.ipynb
+++ b/VAE_stocks.ipynb
@@ -954,13 +954,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 285,
    "outputs": [
     {
      "data": {
       "text/plain": "'class PositionalEncoding(nn.Module):\\n    # write positional encoding for time series data\\n    def __init__(self, d_model, dropout=0.1, max_len=5000):\\n        super(PositionalEncoding, self).__init__()\\n        self.dropout = nn.Dropout(p=dropout)\\n        self.d_model = d_model\\n        self.max_len = max_len\\n        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\\n        self.pe = torch.zeros(self.max_len, self.d_model).to(self.device)\\n        position = torch.arange(0, self.max_len, dtype=torch.float).unsqueeze(1).to(self.device)\\n        div_term = torch.exp(torch.arange(0, self.d_model, 2).float() * (-math.log(10000.0) / self.d_model)).to(self.device)\\n        self.pe[:, 0::2] = torch.sin(position * div_term)\\n        self.pe[:, 1::2] = torch.cos(position * div_term)\\n        self.pe = self.pe.unsqueeze(0).transpose(0, 1)\\n    def forward(self, x):\\n        x = x.permute(1, 0, 2)\\n        x = x + self.pe[:x.size(0), :]\\n\\n        return self.dropout(x).permute(1, 0, 2)'"
      },
-     "execution_count": 274,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,6 @@
     "    self.sub_seq_len = sub_seq_len\n",
     "    self.seq_len, self.n_features = seq_len, n_features\n",
     "    self.embedding_dim, self.hidden_dim = embedding_dim, 2 * embedding_dim\n",
-    "    print(f\"hidden_dim: {self.hidden_dim}\")\n",
     "    self.num_layers = num_layers\n",
     "    self.bidirectional = bidirectional\n",
     "    self.chunk_index_embedding = ChunkIndexEmbedding(num_chunks=self.seq_len,embedding_dim=embedding_dim)\n",
@@ -1148,7 +1147,7 @@
     "        batch_size, expended_seq_len, n_features = out.size()\n",
     "        # normalize the output\n",
     "        out = out.reshape((batch_size* expended_seq_len , n_features))\n",
-    "        out = self.norma(out)\n",
+    "        #out = self.norma(out)\n",
     "\n",
     "        # Final linear transformation\n",
     "        out = self.output_linear(out)\n",
@@ -1303,65 +1302,14 @@
      "height": 143
     },
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:24:47.873633Z",
-     "start_time": "2023-11-12T21:24:47.867700Z"
+     "end_time": "2023-11-12T21:33:17.158574Z",
+     "start_time": "2023-11-12T21:33:17.154141Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Tensor Shape: torch.Size([2, 10, 16])\n",
-      "Output Tensor Shape: torch.Size([2, 40, 32])\n"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "\n",
-    "# Set random seed for reproducibility\n",
-    "torch.manual_seed(42)\n",
-    "\n",
-    "# Example input tensor\n",
-    "batch_size = 2\n",
-    "seq_len = 10\n",
-    "n_features = 16\n",
-    "input_size = 16  # This is the input size of the ExpandWithAttentionResidual module\n",
-    "\n",
-    "input_tensor = torch.rand((batch_size, seq_len, n_features))\n",
-    "\n",
-    "# Instantiate the ExpandWithAttentionResidual module\n",
-    "expand_module = ExpandWithAttentionResidual(\n",
-    "    input_size=input_size,\n",
-    "    output_size=32,  # Adjust output size as needed\n",
-    "    hidden_size_attention=16,\n",
-    "    group_size=2,\n",
-    "    expansion_factor=4  # Adjust expansion factor as needed\n",
-    ")\n",
-    "\n",
-    "# Forward pass\n",
-    "output_tensor = expand_module(input_tensor)\n",
-    "\n",
-    "# Print shapes for verification\n",
-    "print(\"Input Tensor Shape:\", input_tensor.shape)\n",
-    "print(\"Output Tensor Shape:\", output_tensor.shape)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-12T21:24:48.150279Z",
-     "start_time": "2023-11-12T21:24:48.126911Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 286,
    "outputs": [],
    "source": [
     "class RecurrentAutoencoder(nn.Module):\n",
@@ -1381,38 +1329,37 @@
    "metadata": {
     "id": "RNCtBAqRufGp",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:24:48.150821Z",
-     "start_time": "2023-11-12T21:24:48.130353Z"
+     "end_time": "2023-11-12T21:33:17.495826Z",
+     "start_time": "2023-11-12T21:33:17.391111Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 287,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "sub_series_length : 100\n",
-      "hidden_dim: 256\n",
       "model : RecurrentAutoencoder(\n",
       "  (encoder): Encoder(\n",
       "    (chunk_index_embedding): ChunkIndexEmbedding(\n",
-      "      (embedding): Embedding(100, 128)\n",
+      "      (embedding): Embedding(100, 32)\n",
       "    )\n",
-      "    (mu): Linear(in_features=6400, out_features=32, bias=True)\n",
-      "    (log_var): Linear(in_features=6400, out_features=32, bias=True)\n",
+      "    (mu): Linear(in_features=1600, out_features=32, bias=True)\n",
+      "    (log_var): Linear(in_features=1600, out_features=32, bias=True)\n",
       "    (sampling_layer): SamplingLayerVAE()\n",
-      "    (rnn1): LSTM(128, 256, batch_first=True, bidirectional=True)\n",
-      "    (rnn2): LSTM(512, 128, batch_first=True)\n",
-      "    (embedding_layer): Linear(in_features=1, out_features=128, bias=True)\n",
+      "    (rnn1): LSTM(32, 64, batch_first=True, bidirectional=True)\n",
+      "    (rnn2): LSTM(128, 32, batch_first=True)\n",
+      "    (embedding_layer): Linear(in_features=1, out_features=32, bias=True)\n",
       "    (transformer_1): CompressWithAttentionResidual(\n",
-      "      (Q_linear): Linear(in_features=128, out_features=128, bias=True)\n",
-      "      (K_linear): Linear(in_features=128, out_features=128, bias=True)\n",
-      "      (V_linear): Linear(in_features=128, out_features=128, bias=True)\n",
-      "      (attention_output_linear): Linear(in_features=128, out_features=128, bias=True)\n",
-      "      (output_linear): Linear(in_features=128, out_features=128, bias=True)\n",
+      "      (Q_linear): Linear(in_features=32, out_features=32, bias=True)\n",
+      "      (K_linear): Linear(in_features=32, out_features=32, bias=True)\n",
+      "      (V_linear): Linear(in_features=32, out_features=32, bias=True)\n",
+      "      (attention_output_linear): Linear(in_features=32, out_features=32, bias=True)\n",
+      "      (output_linear): Linear(in_features=32, out_features=32, bias=True)\n",
       "    )\n",
       "  )\n",
       "  (decoder): Decoder(\n",
@@ -1421,17 +1368,17 @@
       "      (K_linear): Linear(in_features=32, out_features=64, bias=True)\n",
       "      (V_linear): Linear(in_features=32, out_features=64, bias=True)\n",
       "      (attention_output_linear): Linear(in_features=64, out_features=64, bias=True)\n",
-      "      (output_linear): Linear(in_features=32, out_features=128, bias=True)\n",
+      "      (output_linear): Linear(in_features=32, out_features=32, bias=True)\n",
       "      (norma): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "    )\n",
       "    (output_embeding): OutputEmbedding(\n",
-      "      (embedding): Linear(in_features=256, out_features=1, bias=True)\n",
+      "      (embedding): Linear(in_features=64, out_features=1, bias=True)\n",
       "    )\n",
       "    (chunk_index_embedding): ChunkIndexEmbedding(\n",
       "      (embedding): Embedding(100, 32)\n",
       "    )\n",
-      "    (rnn1): LSTM(128, 128, batch_first=True, bidirectional=True)\n",
-      "    (rnn2): LSTM(256, 256, batch_first=True)\n",
+      "    (rnn1): LSTM(32, 32, batch_first=True, bidirectional=True)\n",
+      "    (rnn2): LSTM(64, 64, batch_first=True)\n",
       "  )\n",
       ")\n"
      ]
@@ -1441,7 +1388,7 @@
     "print(f\"sub_series_length : {sub_series_length}\")\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "latent_dim = 32\n",
-    "model = RecurrentAutoencoder(sub_series_length, 1, 128,sub_seq_len=50,latent_dim=latent_dim).to(device)\n",
+    "model = RecurrentAutoencoder(sub_series_length, 1, 32,sub_seq_len=50,latent_dim=latent_dim).to(device)\n",
     "print(f\"model : {model}\")"
    ],
    "metadata": {
@@ -1451,14 +1398,14 @@
     "id": "j7_jlbF8ufGp",
     "outputId": "983ee185-47ba-4a21-f35e-6c58b7b2dcc3",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:24:48.668188Z",
-     "start_time": "2023-11-12T21:24:48.633577Z"
+     "end_time": "2023-11-12T21:33:18.132496Z",
+     "start_time": "2023-11-12T21:33:18.109760Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 288,
    "outputs": [],
    "source": [
     "def KL_loss(mu, sigma):\n",
@@ -1474,8 +1421,8 @@
    "metadata": {
     "id": "xlV0gPUvufGp",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:24:49.144572Z",
-     "start_time": "2023-11-12T21:24:49.121899Z"
+     "end_time": "2023-11-12T21:33:18.535305Z",
+     "start_time": "2023-11-12T21:33:18.522243Z"
     }
    }
   },
