adding residual connexions and attention decoder

--- a/VAE_stocks.ipynb
+++ b/VAE_stocks.ipynb
@@ -954,13 +954,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 321,
    "outputs": [
     {
      "data": {
       "text/plain": "'class PositionalEncoding(nn.Module):\\n    # write positional encoding for time series data\\n    def __init__(self, d_model, dropout=0.1, max_len=5000):\\n        super(PositionalEncoding, self).__init__()\\n        self.dropout = nn.Dropout(p=dropout)\\n        self.d_model = d_model\\n        self.max_len = max_len\\n        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\\n        self.pe = torch.zeros(self.max_len, self.d_model).to(self.device)\\n        position = torch.arange(0, self.max_len, dtype=torch.float).unsqueeze(1).to(self.device)\\n        div_term = torch.exp(torch.arange(0, self.d_model, 2).float() * (-math.log(10000.0) / self.d_model)).to(self.device)\\n        self.pe[:, 0::2] = torch.sin(position * div_term)\\n        self.pe[:, 1::2] = torch.cos(position * div_term)\\n        self.pe = self.pe.unsqueeze(0).transpose(0, 1)\\n    def forward(self, x):\\n        x = x.permute(1, 0, 2)\\n        x = x + self.pe[:x.size(0), :]\\n\\n        return self.dropout(x).permute(1, 0, 2)'"
      },
-     "execution_count": 313,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,14 +1301,14 @@
      "height": 143
     },
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:37:40.917438Z",
-     "start_time": "2023-11-12T21:37:40.881820Z"
+     "end_time": "2023-11-12T21:38:39.541386Z",
+     "start_time": "2023-11-12T21:38:39.535919Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 325,
    "outputs": [],
    "source": [
     "class RecurrentAutoencoder(nn.Module):\n",
@@ -1321,6 +1321,7 @@
     "        sub_seq_len=sub_seq_len,latent_dim=latent_dim).to(device)\n",
     "  def forward(self, x):\n",
     "    z, mu, sigma, original_x = self.encoder(x)\n",
+    "    print(f\"z shape : {z.shape}\")\n",
     "    x = self.decoder(z)\n",
     "    x = nn.Tanh()(x)\n",
     "    return x, original_x, mu, sigma"
@@ -1328,14 +1329,14 @@
    "metadata": {
     "id": "RNCtBAqRufGp",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:37:41.226650Z",
-     "start_time": "2023-11-12T21:37:41.140017Z"
+     "end_time": "2023-11-12T21:39:38.099424Z",
+     "start_time": "2023-11-12T21:39:38.073052Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 326,
    "outputs": [
     {
      "name": "stdout",
@@ -1347,8 +1348,8 @@
       "    (chunk_index_embedding): ChunkIndexEmbedding(\n",
       "      (embedding): Embedding(50, 32)\n",
       "    )\n",
-      "    (mu): Linear(in_features=320, out_features=32, bias=True)\n",
-      "    (log_var): Linear(in_features=320, out_features=32, bias=True)\n",
+      "    (mu): Linear(in_features=320, out_features=64, bias=True)\n",
+      "    (log_var): Linear(in_features=320, out_features=64, bias=True)\n",
       "    (sampling_layer): SamplingLayerVAE()\n",
       "    (rnn1): LSTM(32, 64, batch_first=True, bidirectional=True)\n",
       "    (rnn2): LSTM(128, 32, batch_first=True)\n",
@@ -1363,18 +1364,18 @@
       "  )\n",
       "  (decoder): Decoder(\n",
       "    (expend_layer): ExpandWithAttentionResidual(\n",
-      "      (Q_linear): Linear(in_features=32, out_features=160, bias=True)\n",
-      "      (K_linear): Linear(in_features=32, out_features=160, bias=True)\n",
-      "      (V_linear): Linear(in_features=32, out_features=160, bias=True)\n",
-      "      (attention_output_linear): Linear(in_features=160, out_features=160, bias=True)\n",
-      "      (output_linear): Linear(in_features=32, out_features=32, bias=True)\n",
-      "      (norma): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "      (Q_linear): Linear(in_features=64, out_features=320, bias=True)\n",
+      "      (K_linear): Linear(in_features=64, out_features=320, bias=True)\n",
+      "      (V_linear): Linear(in_features=64, out_features=320, bias=True)\n",
+      "      (attention_output_linear): Linear(in_features=320, out_features=320, bias=True)\n",
+      "      (output_linear): Linear(in_features=64, out_features=32, bias=True)\n",
+      "      (norma): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
       "    )\n",
       "    (output_embeding): OutputEmbedding(\n",
       "      (embedding): Linear(in_features=64, out_features=1, bias=True)\n",
       "    )\n",
       "    (chunk_index_embedding): ChunkIndexEmbedding(\n",
-      "      (embedding): Embedding(50, 32)\n",
+      "      (embedding): Embedding(50, 64)\n",
       "    )\n",
       "    (rnn1): LSTM(32, 32, batch_first=True, bidirectional=True)\n",
       "    (rnn2): LSTM(64, 64, batch_first=True)\n",
@@ -1386,7 +1387,7 @@
    "source": [
     "print(f\"sub_series_length : {sub_series_length}\")\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "latent_dim = 32\n",
+    "latent_dim = 64\n",
     "model = RecurrentAutoencoder(sub_series_length, 1, 32,sub_seq_len=10,latent_dim=latent_dim).to(device)\n",
     "print(f\"model : {model}\")"
    ],
@@ -1397,14 +1398,14 @@
     "id": "j7_jlbF8ufGp",
     "outputId": "983ee185-47ba-4a21-f35e-6c58b7b2dcc3",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:37:41.743358Z",
-     "start_time": "2023-11-12T21:37:41.722622Z"
+     "end_time": "2023-11-12T21:39:38.527322Z",
+     "start_time": "2023-11-12T21:39:38.491837Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 327,
    "outputs": [],
    "source": [
     "def KL_loss(mu, sigma):\n",
@@ -1420,24 +1421,21 @@
    "metadata": {
     "id": "xlV0gPUvufGp",
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:37:42.747389Z",
-     "start_time": "2023-11-12T21:37:42.727217Z"
+     "end_time": "2023-11-12T21:39:39.311413Z",
+     "start_time": "2023-11-12T21:39:39.288688Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 328,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Signal to tensor: torch.Size([200, 50, 1])\n",
-      "before transformer x shape : torch.Size([200, 50, 32])\n",
-      "original x shape : torch.Size([200, 50, 32])\n",
-      "group size : 5\n",
-      "after transformer x shape : torch.Size([200, 10, 32])\n",
+      "z shape : torch.Size([200, 64])\n",
       "Input shape: torch.Size([200, 50, 1])\n",
       "Output shape: torch.Size([10, 20, 50, 1])\n"
      ]
@@ -1469,8 +1467,8 @@
      "base_uri": "https://localhost:8080/"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-12T21:37:46.449420Z",
-     "start_time": "2023-11-12T21:37:46.337528Z"
+     "end_time": "2023-11-12T21:39:40.567515Z",
+     "start_time": "2023-11-12T21:39:40.471033Z"
     }
    }
   },
