--- a/VAE_test_impl.ipynb
+++ b/VAE_test_impl.ipynb
@@ -12,7 +12,7 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
+    "VAE_stocks (3).ipynbimport torch\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt"
    ]
